RESOLVED FIXED293106
Wasm module compile error when a function contains `try_table` after `return`
https://bugs.webkit.org/show_bug.cgi?id=293106
Summary Wasm module compile error when a function contains `try_table` after `return`
seyoon1705
Reported 2025-05-15 23:10:26 PDT
Commit version: 9d02067f5de4b0402f58d6c83039e206439a8a8c System: Ubuntu 20.04.6 LTS, x86_64 The following Wasm module contains a function whose body is `return` and `try_table`. ``` ;; return_try_table.wat (module (func (return) (try_table)) ) ``` It is a valid Wasm module, so it must be succeed to parse and validate. However, when running `return_try_table.js`, the equivalent JavaScript file, JavaScriptCore raises compile error. ``` $ jsc return_try_table.js Exception: Error: Wasm validate failure module@return_try_table.js:17:20 global code@return_try_table.js:23:7 --> CompileError: WebAssembly.Module doesn't parse at byte 6: function body size doesn't match the expected size, in function at index 0 ```
Attachments
return_try_table.js (810 bytes, application/x-javascript)
2025-05-15 23:11 PDT, seyoon1705
no flags
seyoon1705
Comment 1 2025-05-15 23:11:08 PDT
Created attachment 475262 [details] return_try_table.js
Alexey Proskuryakov
Comment 2 2025-05-16 14:49:47 PDT
*** Bug 293105 has been marked as a duplicate of this bug. ***
Radar WebKit Bug Importer
Comment 3 2025-05-22 23:20:53 PDT
Sosuke Suzuki
Comment 4 2025-05-31 07:45:10 PDT
EWS
Comment 5 2025-06-02 06:12:46 PDT
Committed 295678@main (70f3c3efa49f): <https://commits.webkit.org/295678@main> Reviewed commits have been landed. Closing PR #46167 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.