Cherry-pick 295678@main (70f3c3efa49f). https://bugs.webkit.org/show_bug.cgi?id=293106

[JSC] Fix parsing unreachable `try_table`
    https://bugs.webkit.org/show_bug.cgi?id=293106

    Reviewed by Yusuke Suzuki.

    `try_table` blocks, like `try` and `block`, are always
    terminated by an `end` opcode (`0x0b`). In unreachable
    code paths, `parseUnreachableExpression` increments
    `m_unreachableBlocks` for `try`/`block` so the parser
    later skips the corresponding `end`, but it didn’t do
    this for `try_table`.

    This patch changes to increment `m_unreachableBlocks`
    for unreachable `try_table` blocks as well, allowing
    the parser to consume the `end` opcode and parse the
    function correctly.

    Canonical link: https://commits.webkit.org/295678@main

Canonical link: https://commits.webkit.org/290945.239@webkitglib/2.48